Android: minSdk from 14 (Android 4.0, October 2011) to 22 (Android 5.1, March 2015), Remove legacy code