@@ -1,10 +1,8 @@
 package ch.bailu.aat.providers;
 
-import android.annotation.TargetApi;
 import android.content.Context;
 import android.database.Cursor;
 import android.database.MatrixCursor;
-import android.os.Build;
 import android.os.CancellationSignal;
 import android.os.ParcelFileDescriptor;
 import android.provider.DocumentsContract.Document;
@@ -15,29 +13,29 @@ import androidx.annotation.Nullable;
 
 import java.io.File;
 import java.io.FileNotFoundException;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashSet;
+import java.util.List;
 
 import ch.bailu.aat.R;
 import ch.bailu.aat.preferences.Storage;
 import ch.bailu.aat.preferences.system.AndroidSolidDataDirectory;
 import ch.bailu.aat_lib.preferences.general.SolidPresetCount;
 import ch.bailu.aat_lib.preferences.presets.SolidMET;
+import ch.bailu.aat_lib.util.Objects;
 import ch.bailu.aat_lib.util.fs.AppDirectory;
 
-@TargetApi(Build.VERSION_CODES.KITKAT)
 public class GpxDocumentProvider extends DocumentsProvider {
 
     private static final String[] DEFAULT_ROOT_PROJECTION =
-        new String[]{Root.COLUMN_ROOT_ID, Root.COLUMN_MIME_TYPES,
-        Root.COLUMN_FLAGS, Root.COLUMN_ICON, Root.COLUMN_TITLE,
-        Root.COLUMN_SUMMARY, Root.COLUMN_DOCUMENT_ID,
-        Root.COLUMN_AVAILABLE_BYTES,};
+            new String[]{Root.COLUMN_ROOT_ID, Root.COLUMN_MIME_TYPES,
+                    Root.COLUMN_FLAGS, Root.COLUMN_ICON, Root.COLUMN_TITLE,
+                    Root.COLUMN_SUMMARY, Root.COLUMN_DOCUMENT_ID,
+                    Root.COLUMN_AVAILABLE_BYTES,};
     private static final String[] DEFAULT_DOCUMENT_PROJECTION = new
-        String[]{Document.COLUMN_DOCUMENT_ID, Document.COLUMN_MIME_TYPE,
-        Document.COLUMN_DISPLAY_NAME, Document.COLUMN_LAST_MODIFIED,
-        Document.COLUMN_FLAGS, Document.COLUMN_SIZE,};
+            String[]{Document.COLUMN_DOCUMENT_ID, Document.COLUMN_MIME_TYPE,
+            Document.COLUMN_DISPLAY_NAME, Document.COLUMN_LAST_MODIFIED,
+            Document.COLUMN_FLAGS, Document.COLUMN_SIZE,};
     private static final String ROOT = "root";
     private static final String DIR_PREFIX = "dir";
     private static final String GPX_PREFIX = "gpx";
@@ -53,7 +51,7 @@ public class GpxDocumentProvider extends DocumentsProvider {
                 .add(Root.COLUMN_FLAGS, Root.FLAG_SUPPORTS_RECENTS)
                 .add(Root.COLUMN_TITLE, "AAT GPX")
                 .add(Root.COLUMN_DOCUMENT_ID, ROOT)
-                .add(Root.COLUMN_MIME_TYPES, new HashSet<>(Arrays.asList("application/gpx+xml")));
+                .add(Root.COLUMN_MIME_TYPES, new HashSet<>(List.of("application/gpx+xml")));
         return result;
     }
 
@@ -71,10 +69,10 @@ public class GpxDocumentProvider extends DocumentsProvider {
         final Context context = getContext();
         final String presetLabel = context.getString(R.string.p_preset);
         final File file = new File(AppDirectory.getTrackListDirectory(new AndroidSolidDataDirectory(context), preset).getPath());
-        final String met = new SolidMET(new Storage(context),preset).getValueAsString();
+        final String met = new SolidMET(new Storage(context), preset).getValueAsString();
         result.newRow()
                 .add(Document.COLUMN_DOCUMENT_ID, DIR_PREFIX + preset)
-                .add(Document.COLUMN_DISPLAY_NAME, presetLabel + " " + (preset+1) + ": " + met)
+                .add(Document.COLUMN_DISPLAY_NAME, presetLabel + " " + (preset + 1) + ": " + met)
                 .add(Document.COLUMN_MIME_TYPE, Document.MIME_TYPE_DIR)
                 .add(Document.COLUMN_FLAGS, 0)
                 .add(Document.COLUMN_LAST_MODIFIED, file.lastModified())
@@ -120,7 +118,7 @@ public class GpxDocumentProvider extends DocumentsProvider {
         final int preset = Integer.parseInt(parentDocumentId.substring(DIR_PREFIX.length()));
         final File dir = new File(AppDirectory.getTrackListDirectory(new AndroidSolidDataDirectory(context), preset).getPath());
 
-        for (File file: dir.listFiles()) {
+        for (File file : dir.listFiles()) {
             if (file.isFile() && file.getName().endsWith(".gpx")) {
                 includeFile(result, preset, file);
             }
@@ -139,8 +137,10 @@ public class GpxDocumentProvider extends DocumentsProvider {
         final File file = new File(AppDirectory.getTrackListDirectory(new AndroidSolidDataDirectory(context), preset).descendant(gpx).getPath());
         if (!file.isFile() || !file.getName().endsWith(".gpx"))
             throw new FileNotFoundException(documentId);
-        if (!file.getParentFile().equals(new File(AppDirectory.getTrackListDirectory(new AndroidSolidDataDirectory(context), preset).getPath())))
+        if (!Objects.equals(file.getParentFile(),
+                new File(AppDirectory.getTrackListDirectory(new AndroidSolidDataDirectory(context), preset).getPath()))) {
             throw new FileNotFoundException(documentId);
+        }
         return ParcelFileDescriptor.open(file, ParcelFileDescriptor.parseMode(mode));
     }
 
@@ -171,6 +171,6 @@ public class GpxDocumentProvider extends DocumentsProvider {
 
     @Override
     public boolean onCreate() {
-        return Build.VERSION.SDK_INT >= Build.VERSION_CODES.KITKAT;
+        return true;
     }
 }
